# Unlock-PDF

./: .gitattributes  .gitmodules  CMakeLists.txt  Crack-file.pdf.txt  Inspector.yml  New Text Document.txt  PDF_Password_Retriever.ipynb  README.md  README.md.rej  RUN.md  RUN.txt  Unlock-PDF.cpp  build_and_run.bat  build_and_run_linux.sh  build_and_run_macos.sh  compile.bat  compile2.bat  compile3.bat  compile_openssl.bat  dual_password_cracker.cpp  fix.patch  full_speed_build_and_run.bat  full_speed_build_and_run.sh  new_pdf_cracker.cpp  passwordlist.txt  pdf_analyze.cpp  pure_pdf_cracker.cpp  pure_sha256.hpp  run_example.bat  try_password_once.bat
Backup/version1/: new_pdf_cracker.cpp  ss.py
Backup/version2/: a.py  new_pdf_cracker.cpp
PasswordMaker/: password_generator.cpp
b/scripts/: create_sample_plain_pdf.py
b/tests/: README.md
b/tests/wordlists/: test_passwords.txt
fail/dual_password_cracker/: dual_password_cracker.cpp  pure_aes256.hpp
fail/pure_pdf_cracker/: pdf_encrypt_info.hpp  pdf_parse_helpers.hpp
gui/: package_gui_exe.bat  unlock_pdf_gui.py  unlock_pdf_gui.pyw
include/crypto/: aes.h  md5.h  rc4.h  sha2.h
include/pdf/: pdf_cracker.h  pdf_parser.h  pdf_types.h
include/pdf/encryption/: aes128_handler.h  aes256_handler.h  encryption_handler.h  encryption_handler_registry.h  open_handler.h  owner_password_handler.h  password_handler.h  pki_handler.h  rc4_128_handler.h  (+4 more)
include/util/: system_info.h  wordlist_generator.h
podofo/: podofo.h
podofo/auxiliary/: podofo_config.h
podofo/main/: PdfDocument.h  PdfError.h  PdfMemDocument.h
scripts/: compare_encryption_info.py
src/: device_info.cpp  main.cpp
src/crypto/: aes.cpp  md5.cpp  rc4.cpp  sha2.cpp
src/pdf/: pdf_cracker.cpp  pdf_parser.cpp
src/util/: system_info.cpp  wordlist_generator.cpp
(+12 files in other folders)
